<?xml version="1.0"?>
<package format="2">
  <name>unitree_base</name>
  <version>0.1.0</version>
  <description>
    The package for Unitree
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>unitree_legged_msgs</depend>
  <depend>realsense2_camera</depend>
  <depend>rgbd_launch</depend>
</package>